# tropical-width

./: LICENSE  README.md  config.yaml  figures-v2.py  figures-v3.py  figures-v4.py  figures.ipynb  streamfunction.ipynb
Docker/: Dockerfile  build.sh  config.yaml  push.sh  run_process_cmip6.py  submit.py  submit_batch.py  submit_process_oscar.py
Docker/tropicalwidth/: README.md  pyproject.toml
Docker/tropicalwidth/src/tropicalwidth/: libtropicalwidth.py  process.py  process_cmip6.py  process_oscar.py
python/: download_era5.py  era5.py  figures.ipynb
tropicalwidth/: README.md  pyproject.toml
tropicalwidth/src/tropicalwidth/: download_era5.py  download_oscar.py  libtropicalwidth.py  process.py  process_ccmp.py  process_cmip6.py  process_era5.py  process_oscar.py
