[build-system]
requires = [ "hatchling>=1.22.2" ]
build-backend = "hatchling.build"

[project]
name = "tropicalwidth"
version = "1.1.0"
authors = [
	{ name="Stephen Leroy", email="stephen.leroy@janusresearch.us" },
	]
description = "Utilities for research on the evolving width of the Tropics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "hatchling", "boto3", "numpy", 
	"globus-sdk==3.60.0", "intake-esgf==2025.6.6", "xarray==2025.7.1", 
	"requests", "global_land_mask", "netCDF4", "tqdm" ]

classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent"
	]

[project.urls]
"Homepage" = "https://www.aer-gitlab.com/sleroy/tropical-width"
"Bug Tracker" = "https://www.aer-gitlab.com/sleroy/tropical-width/-/issues"

[project.scripts]
download_era5 = "tropicalwidth.download_era5:main"
download_oscar = "tropicalwidth.download_oscar:main"
process_ccmp = "tropicalwidth.process_ccmp:main"
process_cmip6 = "tropicalwidth.process_cmip6:main"
process_oscar = "tropicalwidth.process_oscar:main"
process_era5 = "tropicalwidth.process_era5:main"

